<resources>
    <string name="app_name">Port Authority Complainter</string>
    <string name="app_name_full">Port Authority Complaint Reporter</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="home_phone">Home Phone *</string>
    <string name="email">Email *</string>
    <string name="route_number">Route Number *</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="location">Location (Stop Name / Place) *</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="operator_number">Operator Number</string>
    <string name="description">Description *</string>
    <string name="title_review"><![CDATA[Review & Submit]]></string>
    <string name="title_submit">Submit</string>
    <string name="title_submit_confirm">Submit Complaint?</string>
    <string name="msg_submit_confirm">Are you sure that you want to submit the complaint? This cannot be undone.</string>
    <string name="title_disclaimer">Disclaimer</string>
    <string name="msg_disclaimer">This app is not created nor endorsed by the Port Authority of Allegheny County. It is an open source product created by a user of the bus system to allow for easier reporting of issues on mobile devices.</string>
    <string name="title_about_oss"><![CDATA[About & Open Source Licenses]]></string>
    <string name="title_unknown_error">Unknown Error</string>
    <string name="msg_unknown_error">Something has gone wrong while attempting to interact with the form. This usually signifies that part of the form has been updated and that the app may no longer be compatible with it.   Error message:</string>
    <string name="field_ada_related">Is this ADA related?</string>
    <string name="title_retry">Retry</string>
    <string name="title_done">Done</string>
</resources>
