<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="12dp"
    android:paddingBottom="12dp"
    android:background="#FFF"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:gravity="center_vertical"
        android:text="@string/title_submit_confirm"
        android:textColor="#000"
        android:textSize="20sp"
        android:layout_gravity="center_vertical" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/msg_submit_confirm"
        android:textColor="#B3000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:gravity="center_vertical|end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@android:string/cancel"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/title_submit"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:gravity="center"
            android:background="?attr/selectableItemBackground"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textAllCaps="true" />

    </LinearLayout>

</LinearLayout>