<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="8dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbars="vertical"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="22dp"
                    android:text="@string/title_review"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <FrameLayout
                    android:id="@+id/main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:animateLayoutChanges="true">

            <FrameLayout
                android:id="@+id/submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="4dp"
                        android:scaleType="centerInside"
                        android:tint="#000"
                        app:srcCompat="@drawable/ic_done" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/title_submit"
                        android:textColor="#000"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/retry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:layout_weight="1"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="4dp"
                        android:scaleType="centerInside"
                        android:tint="#000"
                        app:srcCompat="@drawable/ic_refresh" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/title_retry"
                        android:textColor="#000"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/done"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:layout_weight="1"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="4dp"
                        android:scaleType="centerInside"
                        android:tint="#000"
                        app:srcCompat="@drawable/ic_done" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/title_done"
                        android:textColor="#000"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

    <me.jfenn.pacomplaints.views.ProgressLineView
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="6dp" />

</FrameLayout>